entrega tercera preentrega

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -2,25 +2,9 @@
 
 $mainColor : #00559f;
 $secondaryColor :#438ec0;
+$tercerColor : #569eadff;
 $keyColor : rgb(4, 2, 2);
-$white : rgb(249, 245, 245);
+$blanco : rgb(249, 245, 245);
 
 //fonts
-$mainFont: 'Roboto', sans-serif;
-
-//sizes textos 
-$textSm : 0.8em;
-$textMd : 1em;
-$textXl : 2em;
-$textXXL : 3em;
-
-//fontweight
-$fonLight : 300;
-$fontRegular : 400;
-$fontBold : 600;
-
-// p {
-//     font-family: $mainFont;
-//     font-size: $textMd;
-//     font-weight: $fontBold;
-// }
+$mainFont: 'Oswald', sans-serif;
