--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,10 @@
 //inports
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-@import "_vars";
-@import "_commons";
-@import "_nav";
-@import "_about";
+@import "vars";
+@import "general";
+@import "about";
+@import "footer";
+@import "header";
+@import "productos";
+@import "proyectos";
+@import "contacto";
