correccion de lorem impum y entrega de tercera preentrega

--- a/scss/_proyectos.scss
+++ b/scss/_proyectos.scss
@@ -9,9 +9,9 @@
 .proyecto {
     display: flex;
     margin: 20px;
-    border: 4px solid #63666a;
+    border: 4px solid #c8cbce;
     border-radius: 10px;
-    background-color: #63666a;
+    background-color: #c8cbce;
 
     .imgProyecto {
         width: 50%;
