--- a/css/main.css
+++ b/css/main.css
@@ -164,9 +164,9 @@ header nav ul li {
 .proyecto {
   display: flex;
   margin: 20px;
-  border: 4px solid #63666a;
+  border: 4px solid #c8cbce;
   border-radius: 10px;
-  background-color: #63666a;
+  background-color: #c8cbce;
 }
 .proyecto .imgProyecto {
   width: 50%;
