--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,17 @@
   font-family: "Oswald", sans-serif;
 }
 
+form, .cajaProducto {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.btnFormulario, .btnCotizar {
+  opacity: 0.7;
+}
+.btnFormulario:hover, .btnCotizar:hover {
+  opacity: 1;
+}
+
 body {
   background-color: whitesmoke;
 }
@@ -41,6 +52,37 @@ iframe {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+.textoProyecto .btnVerMas, .btnCotizar, .error a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+.error {
+  background-image: url("../img/construyendo.jpg");
+  height: 500px;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.error h1 {
+  font-size: 5vw;
+  color: white;
+}
+.error h3 {
+  font-size: 3vw;
+  margin-bottom: 20px;
+}
+.error a {
+  background-color: #00559f;
+  font-size: 28px;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
 
 .quienesSomos {
@@ -108,50 +150,22 @@ header nav ul li {
   }
 }
 /* PRODUCTOS */
-.contenedor {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-}
-
-.contenedorProductos {
+#mainProductos {
   margin: 20px;
-  width: 20%;
-  border: 4px solid #63666a;
-  border-radius: 10px;
-  background-color: #63666a;
-}
-.contenedorProductos h3 {
-  color: white;
-  text-align: center;
-  padding: 10px;
-  font-weight: bold;
-  font-size: 15px;
-  text-transform: uppercase;
 }
 
-.card-img-top {
-  display: block;
-  object-fit: cover;
-  height: auto;
+.imgProducto {
+  padding: 5px;
 }
 
-@media (min-width: 800px) {
-  .col-sm-4 {
-    flex: 0 0 auto;
-    width: 33%;
-  }
-}
 .btnCotizar {
   background-color: #569ead;
-  color: whitesmoke;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
   font-size: 18px;
   cursor: pointer;
   margin-top: 10px;
-  text-decoration: none;
 }
 
 /* PROYECTOS */
@@ -181,18 +195,22 @@ header nav ul li {
 }
 .textoProyecto .btnVerMas {
   background-color: #569ead;
-  color: whitesmoke;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
   font-size: 18px;
   cursor: pointer;
   margin-top: 10px;
-  text-decoration: none;
+}
+
+#mainContacto h2 {
+  margin: 0 0 3% 0;
 }
 
 form {
-  margin: 0 90px 10px;
+  padding: 3%;
+  margin: 0 5% 5% 5%;
+  border-radius: 5px;
 }
 
 .btnFormulario {
@@ -222,6 +240,7 @@ textarea {
   border-radius: 5px;
   font-size: 16px;
   margin-bottom: 10px;
+  color: #00559f;
 }
 
 .contacto {
