--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,5 +1,14 @@
+#mainContacto {
+    h2 {
+        margin: 0 0 3% 0;
+    }
+}
+
 form {
-    margin: 0 90px 10px;
+    padding: 3%;
+    margin: 0 5% 5% 5%;
+    @extend %sombraContenedor;
+    border-radius: 5px;
 }
 
 .btnFormulario {
@@ -11,6 +20,7 @@ form {
     font-size: 18px;
     cursor: pointer;
     margin-top: 10px;
+    @extend %efectoHover;
 }
 
 label {
@@ -29,6 +39,7 @@ textarea {
     border-radius: 5px;
     font-size: 16px;
     margin-bottom: 10px;
+    color: $mainColor;
 }
 
 
