--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -5,6 +5,18 @@
     font-family: $mainFont;
 }
 
+%sombraContenedor {
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+%efectoHover {
+    opacity: 0.7;
+
+    &:hover {
+        opacity: 1;
+    }
+}
+
 body {
     background-color: whitesmoke;
 }
@@ -45,15 +57,55 @@ iframe {
     }
 }
 
+%baseLinks {
+    text-decoration: none;
+    color: whitesmoke;
+}
+
 @mixin boton {
 
     background-color: $tercerColor;
-    color: whitesmoke;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     font-size: 18px;
     cursor: pointer;
     margin-top: 10px;
-    text-decoration: none;
+    @extend %baseLinks;
+}
+
+
+.error {
+    background-image: url("../img/construyendo.jpg");
+    height: 500px;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+
+    h1 {
+        font-size: 5vw;
+        color: white;
+    }
+
+    h3 {
+        font-size: 3vw;
+        margin-bottom: 20px;
+    }
+
+    a {
+        // @include boton;
+        background-color: $mainColor;
+        font-size: 28px;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        @extend %baseLinks;
+
+    }
+
+
 }
