--- a/css/main.css
+++ b/css/main.css
@@ -6,15 +6,16 @@
   font-family: "Oswald", sans-serif;
 }
 
-form, .cajaProducto {
+form, .proyecto, .cajaProducto, .quienesSomos {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-.btnFormulario, .btnCotizar {
-  opacity: 0.7;
+.btnFormulario, .textoProyecto, .proyecto .imgProyecto, .btnCotizar {
+  opacity: 0.8;
+  transition: opacity 0.3s linear;
 }
-.btnFormulario:hover, .btnCotizar:hover {
-  opacity: 1;
+.btnFormulario:hover, .textoProyecto:hover, .proyecto .imgProyecto:hover, .btnCotizar:hover {
+  opacity: 2;
 }
 
 body {
@@ -54,42 +55,18 @@ iframe {
   height: 100%;
 }
 
-.textoProyecto .btnVerMas, .btnCotizar, .error a {
+.error a, .textoProyecto .btnVerMas, .btnCotizar {
   text-decoration: none;
   color: whitesmoke;
 }
 
-.error {
-  background-image: url("../img/construyendo.jpg");
-  height: 500px;
-  background-position: center;
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-.error h1 {
-  font-size: 5vw;
-  color: white;
-}
-.error h3 {
-  font-size: 3vw;
-  margin-bottom: 20px;
-}
-.error a {
-  background-color: #00559f;
-  font-size: 28px;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-}
-
 .quienesSomos {
   margin: 20px;
+  border-radius: 10px;
 }
 .quienesSomos .misionVision {
   text-align: center;
+  margin: 10px 0 10px 0;
 }
 .quienesSomos .misionVision h3 {
   color: #00559f;
@@ -156,6 +133,7 @@ header nav ul li {
 
 .imgProducto {
   padding: 5px;
+  border-radius: 10px;
 }
 
 .btnCotizar {
@@ -178,22 +156,24 @@ header nav ul li {
 .proyecto {
   display: flex;
   margin: 20px;
-  border: 4px solid #c8cbce;
+  border: 4px solid;
   border-radius: 10px;
-  background-color: #c8cbce;
 }
 .proyecto .imgProyecto {
-  width: 50%;
+  width: 70%;
+  border-radius: 5px;
 }
 
 .textoProyecto {
   margin: 20px;
+  color: #00559f;
 }
 .textoProyecto p {
   margin-top: 20px;
   margin-bottom: 30px;
 }
 .textoProyecto .btnVerMas {
+  width: 70%;
   background-color: #569ead;
   border: none;
   padding: 10px 20px;
@@ -248,6 +228,32 @@ textarea {
   width: 70px;
   bottom: 50px;
   right: 50px;
+}
+
+.error {
+  background-image: url("../img/construyendo.jpg");
+  height: 500px;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.error h1 {
+  font-size: 5vw;
+  color: white;
+}
+.error h3 {
+  font-size: 3vw;
+  margin-bottom: 20px;
+}
+.error a {
+  background-color: #00559f;
+  font-size: 28px;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
 
 /*# sourceMappingURL=main.css.map */
