--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -10,10 +10,11 @@
 }
 
 %efectoHover {
-    opacity: 0.7;
+    opacity: 0.8;
+    transition: opacity 0.3s linear;
 
     &:hover {
-        opacity: 1;
+        opacity: 2;
     }
 }
 
@@ -72,40 +73,4 @@ iframe {
     cursor: pointer;
     margin-top: 10px;
     @extend %baseLinks;
-}
-
-
-.error {
-    background-image: url("../img/construyendo.jpg");
-    height: 500px;
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-
-    h1 {
-        font-size: 5vw;
-        color: white;
-    }
-
-    h3 {
-        font-size: 3vw;
-        margin-bottom: 20px;
-    }
-
-    a {
-        // @include boton;
-        background-color: $mainColor;
-        font-size: 28px;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 5px;
-        @extend %baseLinks;
-
-    }
-
-
 }
