--- a/scss/_error.scss
+++ b/scss/_error.scss
@@ -1,5 +1,5 @@
 .error {
-    background-image: url("../img/construyendo.jpg");
+    background-image: url("../img/construyendo.webp");
     height: 500px;
     background-position: center;
     background-size: cover;
