--- a/scss/_proyectos.scss
+++ b/scss/_proyectos.scss
@@ -7,19 +7,32 @@
 }
 
 .proyecto {
-    // opacity: 0.7;
     @extend %sombraContenedor;
     display: flex;
+    flex-flow: row nowrap;
     margin: 20px;
     border: 4px solid;
     border-radius: 10px;
-    // background-color: #c8cbce;
+
+    @media (max-width: 900px) and (min-width: 400px) {
+        & {
+            flex-flow: column nowrap;
+        }
+    }
 
     .imgProyecto {
         @extend %efectoHover;
-        width: 70%;
+        width: 50%;
         border-radius: 5px;
+
+        @media (max-width: 900px) and (min-width: 400px) {
+            & {
+                width: 100%;
+            }
+        }
     }
+
+
 }
 
 .textoProyecto {
@@ -27,14 +40,18 @@
     margin: 20px;
     color: $mainColor;
 
+    @media (max-width: 900px) and (min-width: 400px) {
+        & {
+            text-align: center;
+        }
+    }
+
     p {
         margin-top: 20px;
         margin-bottom: 30px;
     }
 
     .btnVerMas {
-        // @extend %efectoHover;
-        width: 70%;
         @include boton;
     }
 }
