--- a/scss/_error.scss
+++ b/scss/_error.scss
@@ -8,16 +8,16 @@
     align-items: center;
     text-align: center;
 
-
     h1 {
-        font-size: 5vw;
+        font-size: 8vw;
         color: white;
     }
 
     h3 {
-        font-size: 3vw;
+        font-size: 6vw;
         margin-bottom: 20px;
     }
+
 
     a {
         // @include boton;
@@ -27,6 +27,7 @@
         padding: 10px 20px;
         border-radius: 5px;
         @extend %baseLinks;
+        @extend %efectoHover;
 
     }
 
